--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -49,19 +49,22 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a style="color:black;" class="nav-link js-scroll-trigger" href="#background">Background</a>
+            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger"
+              href="#background">Background</a>
           </li>
           <li class="nav-item">
-            <a style="color:black;" class="nav-link js-scroll-trigger" href="#maps">Maps</a>
+            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger" href="#maps">Maps</a>
           </li>
           <li class="nav-item">
-            <a style="color:black;" class="nav-link js-scroll-trigger" href="#predictions">Predictions</a>
+            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger"
+              href="#predictions">Predictions</a>
           </li>
           <li class="nav-item">
-            <a style="color:black;" class="nav-link js-scroll-trigger" href="#methodology">Methodology</a>
+            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger"
+              href="#methodology">Methodology</a>
           </li>
           <li class="nav-item">
-            <a style="color:black;" class="nav-link js-scroll-trigger" href="#team">Team</a>
+            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger" href="#team">Team</a>
           </li>
         </ul>
       </div>
@@ -72,7 +75,8 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div style="color:black;" class="intro-lead-in">US Food Deserts - Dollar / Grocery Stores</div>
+        <div style="color:black; font-weight: bold;" class="intro-lead-in">US Food Deserts - Dollar / Grocery Stores
+        </div>
         <!-- <div style="color:black;" class="intro-heading text-uppercase">US Food Deserts - Dollar / Grocery Stores</div> -->
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#background">Explore</a>
       </div>
@@ -195,10 +199,8 @@
         <div class="col-lg-10 col-sm-6 portfolio-item">
           <div class="portfolio-caption">
             <h4>Dollar Store Map</h4>
-            <p class="text-muted">This map's color scheme displays the percentage of people, by county, living in food
-              deserts. The darkest color represents the largest number of people living in food deserts.</p>
+            <p class="text-muted">The map illustrates the number of dollar stores nationwide.</p>
           </div>
-
           <div class='tableauPlaceholder' id='viz1566062675765' style='position: relative'><noscript>
               <a href='#'><img alt=' '
                   src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;DollarStoresUSAMap&#47;1_rss.png'
@@ -228,14 +230,13 @@
 
       <br>
 
+      <h4>Dollar/Grocery Store Trends and Growth/Decline</h4>
       <div class="row">
-        <div class="portfolio-caption">
-          <h4>Dollar/Grocery Store Trends</h4>
-          <p class="text-muted">The map illustrates the number of dollar stores from 2007 to 2018.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-4 col-sm-3 portfolio-item">
+        <div class="col-lg-10 col-sm-6 portfolio-item">
+          <div class="portfolio-caption">
+            <h4>Trends</h4>
+            <p class="text-muted">Dollar Store / Grocery Store Trends from 2007 to 2018.</p>
+          </div>
           <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
                   alt=' '
                   src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
@@ -269,7 +270,7 @@
         <div class="col-lg-4 col-sm-3 portfolio-item">
           <div class="portfolio-caption">
             <h4>Growth / Decline</h4>
-            <p class="text-muted">The map illustrates the number of dollar stores from 2007 to 2018.</p>
+            <p class="text-muted">Growth/Decline from 2007 to 2018</p>
           </div>
           <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
                   alt=' '
