--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -229,13 +229,11 @@
       </div>
 
       <br>
-
-      <h4>Dollar/Grocery Store Trends and Growth/Decline</h4>
       <div class="row">
-        <div class="col-lg-10 col-sm-6 portfolio-item">
+        <div class="col-lg-6 col-sm-3 portfolio-item">
           <div class="portfolio-caption">
-            <h4>Trends</h4>
-            <p class="text-muted">Dollar Store / Grocery Store Trends from 2007 to 2018.</p>
+            <h4>Dollar/Grocery Store Trends</h4>
+            <p class="text-muted">Trends from 2007 to 2018.</p>
           </div>
           <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
                   alt=' '
@@ -267,9 +265,9 @@
           </script>
         </div>
 
-        <div class="col-lg-4 col-sm-3 portfolio-item">
+        <div class="col-lg-6 col-sm-3 portfolio-item">
           <div class="portfolio-caption">
-            <h4>Growth / Decline</h4>
+            <h4>Dollar/Grocery Growth / Decline</h4>
             <p class="text-muted">Growth/Decline from 2007 to 2018</p>
           </div>
           <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
