--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -235,7 +235,7 @@
             <h4>Dollar/Grocery Store Trends</h4>
             <p class="text-muted">Trends from 2007 to 2018.</p>
           </div>
-          <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
+          <div style="width: 100%;" class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
                   alt=' '
                   src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
                   style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
@@ -270,7 +270,7 @@
             <h4>Dollar/Grocery Growth / Decline</h4>
             <p class="text-muted">Growth/Decline from 2007 to 2018</p>
           </div>
-          <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
+          <div style="width: 100%;" class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
                   alt=' '
                   src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
                   style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
@@ -323,6 +323,9 @@
               fresh fruit and vegetables
               are displayed.</p>
           </div>
+
+          <!-- Graph goes here!!!! -->
+
         </div>
       </div>
 
@@ -332,16 +335,18 @@
         <div class="col-md-1"></div>
         <div class="col-lg-10 col-sm-6 portfolio-item">
           <div class="portfolio-caption">
-            <p>Urban / Rural Selection </p>
-            <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
-              <option value="urban">Urban</option>
-              <option value="rural">Rural</option>
-            </select>
-
-            <!-- Link to Urban / Rural Graph goes here OR is access via Routes ???? -->
-
-
+            <h4>Urban / Rural Grocery Stores vs. Dollar Stores (Current and Predicted)</h4>
+            <p class="text-muted">The top 3 urban / rural counties with the highest number of people without access to
+              fresh fruit and vegetables
+              are displayed.</p>
           </div>
+
+          <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
+            <option value="urban">Urban</option>
+            <option value="rural">Rural</option>
+          </select>
+
+          <!-- Link to Urban / Rural Graph goes here OR is access via Routes ???? -->
         </div>
       </div>
     </div>
