--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -235,8 +235,8 @@
             <h4>Dollar/Grocery Store Trends</h4>
             <p class="text-muted">Trends from 2007 to 2018.</p>
           </div>
-          <div style="width: 100%;" class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
-                  alt=' '
+          <div style="width: 100%;" class='tableauPlaceholder' id='viz1565920836892' style='position: relative'>
+            <noscript><a href='#'><img alt=' '
                   src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
                   style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
               <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
@@ -270,8 +270,8 @@
             <h4>Dollar/Grocery Growth / Decline</h4>
             <p class="text-muted">Growth/Decline from 2007 to 2018</p>
           </div>
-          <div style="width: 100%;" class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
-                  alt=' '
+          <div style="width: 100%;" class='tableauPlaceholder' id='viz1565920836892' style='position: relative'>
+            <noscript><a href='#'><img alt=' '
                   src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
                   style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
               <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
