--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -230,12 +230,12 @@
 
       <br>
       <div class="row">
-        <div class="col-lg-4 col-sm-3 portfolio-item">
+        <div class="col-lg-6 col-sm-3 portfolio-item">
           <div class="portfolio-caption">
             <h4>Dollar/Grocery Store Trends</h4>
             <p class="text-muted">Trends from 2007 to 2018.</p>
           </div>
-          <div style="width: 100%;" class='tableauPlaceholder' id='viz1565920836892' style='position: relative'>
+          <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'>
             <noscript><a href='#'><img alt=' '
                   src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
                   style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
@@ -265,12 +265,12 @@
           </script>
         </div>
 
-        <div class="col-lg-4 col-sm-3 portfolio-item">
+        <div class="col-lg-6 col-sm-3 portfolio-item">
           <div class="portfolio-caption">
             <h4>Dollar/Grocery Growth / Decline</h4>
             <p class="text-muted">Growth/Decline from 2007 to 2018</p>
           </div>
-          <div style="width: 100%;" class='tableauPlaceholder' id='viz1565920836892' style='position: relative'>
+          <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'>
             <noscript><a href='#'><img alt=' '
                   src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
                   style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
