--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -310,22 +310,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Predictions</h2>
           <h3 class="section-subheading text-muted">The following graphics display the predicted number of grocery
-            stores.</h3> -->
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-lg-10 col-sm-6 portfolio-item">
-          <div class="portfolio-caption">
-            <h4>Urban / Rural Grocery Stores vs. Dollar Stores (Current and Predicted)</h4>
-            <p class="text-muted">The top 3 urban / rural counties with the highest number of people without access to
-              fresh fruit and vegetables
-              are displayed.</p>
-          </div>
-
-          <!-- Graph goes here!!!! -->
-
+            stores.</h3>
         </div>
       </div>
 
