--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body id="page-top">
+<body id="page-top" style="background-color:rgb(118, 126, 106)">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
@@ -267,7 +267,7 @@
 
         <div class="col-lg-6 col-sm-3 portfolio-item">
           <div class="portfolio-caption">
-            <h4>Dollar/Grocery Growth / Decline</h4>
+            <h4>Dollar/Grocery Store Growth / Decline</h4>
             <p class="text-muted">Growth/Decline from 2007 to 2018</p>
           </div>
           <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'>
@@ -313,8 +313,6 @@
             stores.</h3>
         </div>
       </div>
-
-      <br>
 
       <div class="row">
         <div class="col-md-1"></div>
