--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body id="page-top" style="background-color:rgb(118, 126, 106)">
+<body id="page-top" style="background-color:rgb(35, 37, 32)">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
@@ -49,22 +49,24 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger"
+            <a class="nav-link js-scroll-trigger"
               href="#background">Background</a>
+            <!-- <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger"
+              href="#background">Background</a>   -->
           </li>
           <li class="nav-item">
-            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger" href="#maps">Maps</a>
+            <a class="nav-link js-scroll-trigger" href="#maps">Maps</a>
           </li>
           <li class="nav-item">
-            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger"
+            <a class="nav-link js-scroll-trigger"
               href="#predictions">Predictions</a>
           </li>
           <li class="nav-item">
-            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger"
+            <a class="nav-link js-scroll-trigger"
               href="#methodology">Methodology</a>
           </li>
           <li class="nav-item">
-            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger" href="#team">Team</a>
+            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
           </li>
         </ul>
       </div>
@@ -75,7 +77,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div style="color:black; font-weight: bold;" class="intro-lead-in">US Food Deserts - Dollar / Grocery Stores
+        <div class="intro-lead-in">US Food Deserts - Dollar / Grocery Stores
         </div>
         <!-- <div style="color:black;" class="intro-heading text-uppercase">US Food Deserts - Dollar / Grocery Stores</div> -->
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#background">Explore</a>
@@ -84,7 +86,7 @@
   </header>
 
   <!-- Background -->
-  <section class="page-section" id="background">
+  <section class="bg-light page-section" id="background">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
