--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -232,7 +232,7 @@
 
       <br>
       <div class="row">
-        <div class="col-lg-6 col-sm-3 portfolio-item">
+        <div class="col-lg-6 portfolio-item">
           <div class="portfolio-caption">
             <h4>Dollar/Grocery Store Trends</h4>
             <p class="text-muted">Trends from 2007 to 2018.</p>
@@ -267,7 +267,7 @@
           </script>
         </div>
 
-        <div class="col-lg-6 col-sm-3 portfolio-item">
+        <div class="col-lg-6 portfolio-item">
           <div class="portfolio-caption">
             <h4>Dollar/Grocery Store Growth / Decline</h4>
             <p class="text-muted">Growth/Decline from 2007 to 2018</p>
