--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -9,15 +9,6 @@
 
   <title>Food Deserts</title>
 
-  <!-- Our original css files and links -->
-  <!-- <link rel="stylesheet" href="https://use.typekit.net/fwf7daa.css">
-  <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="../static/css/d3style.css">
-  <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-  <!-- Our original css files and links -->
-
-
   <!-- Bootstrap core CSS -->
   <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -51,8 +42,6 @@
           <li class="nav-item">
             <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger"
               href="#background">Background</a>
-            <!-- <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger"
-              href="#background">Background</a>   -->
           </li>
           <li class="nav-item">
             <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger" href="#maps">Maps</a>
@@ -79,8 +68,6 @@
       <div class="intro-text">
         <div style="color:black; font-weight: bold;" class="intro-lead-in">US Food Deserts - Dollar / Grocery Stores
         </div>
-        <!-- <div style="color:black;" class="intro-heading text-uppercase">US Food Deserts - Dollar / Grocery Stores</div> -->
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#background">Explore</a>
       </div>
     </div>
   </header>
@@ -203,8 +190,8 @@
             <h4>Dollar Store Map</h4>
             <p class="text-muted">The map illustrates the number of dollar stores nationwide.</p>
           </div>
-          <div class='tableauPlaceholder' id='viz1566062675765' style='position: relative'><noscript>
-              <a href='#'><img alt=' '
+          <div class='tableauPlaceholder' id='viz1566062675765' style='position: relative'><noscript><a href='#'><img
+                  alt=' '
                   src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;DollarStoresUSAMap&#47;1_rss.png'
                   style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
               <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
@@ -223,16 +210,17 @@
           <script type='text/javascript'>
             var divElement = document.getElementById('viz1566062675765');
             var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%';
-            vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script');
+            vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+            var scriptElement = document.createElement('script');
             scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-            vizElement.parentNode.insertBefore(scriptElement, vizElement);               
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);              
           </script>
         </div>
       </div>
 
       <br>
       <div class="row">
-        <div class="col-sm-3 portfolio-item">
+        <div class="col-sm-6 portfolio-item">
           <div class="portfolio-caption">
             <h4>Dollar/Grocery Store Trends</h4>
             <p class="text-muted">Trends from 2007 to 2018.</p>
@@ -267,7 +255,7 @@
           </script>
         </div>
 
-        <div class="col-sm-3 portfolio-item">
+        <div class="col-sm-6 portfolio-item">
           <div class="portfolio-caption">
             <h4>Dollar/Grocery Store Growth / Decline</h4>
             <p class="text-muted">Growth/Decline from 2007 to 2018</p>
