--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body id="page-top">
+<body id="page-top" style="background-image:url(../static/img/header-bg.jpg)">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
