--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -25,8 +25,7 @@
 
 </head>
 
-<body id="page-top" background="./static/img/header-bg.jpg">
-
+<body id="page-top" style="background-image:url(../static/img/ChrisWaits_BW.jpg)">
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
@@ -40,26 +39,30 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger"
+            <a style="color:black; font-weight: bold" class="nav-link js-scroll-trigger"
               href="#background">Background</a>
+            </a>
           </li>
           <li class="nav-item">
-            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger" href="#maps">Maps</a>
+            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger btn btn-primary btn-m"
+              href="#maps">Maps</a>
           </li>
           <li class="nav-item">
             <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger"
               href="#predictions">Predictions</a>
           </li>
           <li class="nav-item">
-            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger"
+            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger btn btn-primary btn-m"
               href="#methodology">Methodology</a>
           </li>
           <li class="nav-item">
-            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger" href="#team">Team</a>
+            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger btn btn-primary btn-m"
+              href="#team">Team</a>
           </li>
         </ul>
       </div>
     </div>
+    <p style="color:black; font-weight: bold">Photo by Chris Waits</p>
   </nav>
 
   <!-- Header -->
