--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -22,10 +22,11 @@
 
   <!-- Custom styles for this template -->
   <link href="../static/css/agency.min.css" rel="stylesheet">
-
 </head>
 
-<body id="page-top" style="background-image:url(../static/img/ChrisWaits_BW.jpg)">
+<body id="page-top">
+  <body id="page-top" style="background-image:url(../static/img/ChrisWaits_BW.jpg); background-size: 100%"></body>
+ 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
@@ -39,40 +40,40 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a style="color:black; font-weight: bold" class="nav-link js-scroll-trigger"
+            <a class="nav-link js-scroll-trigger"
               href="#background">Background</a>
             </a>
           </li>
           <li class="nav-item">
-            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger btn btn-primary btn-m"
+            <a class="nav-link js-scroll-trigger"
               href="#maps">Maps</a>
           </li>
           <li class="nav-item">
-            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger"
+            <a class="nav-link js-scroll-trigger"
               href="#predictions">Predictions</a>
           </li>
           <li class="nav-item">
-            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger btn btn-primary btn-m"
+            <a class="nav-link js-scroll-trigger"
               href="#methodology">Methodology</a>
           </li>
           <li class="nav-item">
-            <a style="color:black; font-weight: bold;" class="nav-link js-scroll-trigger btn btn-primary btn-m"
+            <a class="nav-link js-scroll-trigger"
               href="#team">Team</a>
           </li>
         </ul>
       </div>
     </div>
-    <p style="color:black; font-weight: bold">Photo by Chris Waits</p>
   </nav>
 
   <!-- Header -->
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div style="color:black; font-weight: bold;" class="intro-lead-in">US Food Deserts - Dollar / Grocery Stores
+        <div class="intro-lead-in">US Food Deserts - Dollar / Grocery Stores
         </div>
       </div>
     </div>
+    <p>Photo by Chris Waits</p>
   </header>
 
   <!-- Background -->
@@ -371,7 +372,7 @@
               <i class="fas fa-paint-brush fa-stack-1x fa-inverse"></i>
             </span>
             <h4>Bic Vu</h4>
-            <p class="text-muted">Lead Designer</p>
+            <p class="text-muted">Machine Learning</p>
           </div>
         </div>
         <div class="col-sm-4">
@@ -391,14 +392,25 @@
               <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h4>Carol Fogel</h4>
-            <p class="text-muted">xxxxx</p>
+            <p class="text-muted">Website, D3</p>
           </div>
         </div>
       </div>
     </div>
   </section>
-</body>
 
-<script type="text/javascript" src="../static/js/app.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="../static/vendor/jquery/jquery.min.js"></script>
+  <script src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="../static/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="../static/js/agency.min.js"></script>
+
+  <script type="text/javascript" src="../static/js/app.js"></script>
+
+</body>
 
 </html>
