--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -22,11 +22,13 @@
 
   <!-- Custom styles for this template -->
   <link href="../static/css/agency.min.css" rel="stylesheet">
+
 </head>
 
 <body id="page-top">
+
   <body id="page-top" style="background-image:url(../static/img/ChrisWaits_BW.jpg); background-size: 100%"></body>
- 
+
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
@@ -40,25 +42,20 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger"
-              href="#background">Background</a>
+            <a class="nav-link js-scroll-trigger" href="#background">Background</a>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger"
-              href="#maps">Maps</a>
+            <a class="nav-link js-scroll-trigger" href="#maps">Maps</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger"
-              href="#predictions">Predictions</a>
+            <a class="nav-link js-scroll-trigger" href="#predictions">Predictions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger"
-              href="#methodology">Methodology</a>
+            <a class="nav-link js-scroll-trigger" href="#methodology">Methodology</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger"
-              href="#team">Team</a>
+            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
           </li>
         </ul>
       </div>
@@ -147,8 +144,8 @@
       </div>
 
       <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-lg-10 col-sm-6 portfolio-item">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10 portfolio-item">
           <div class="portfolio-caption">
             <h4>Food Desert Map</h4>
             <p class="text-muted">This map's color scheme displays the percentage of people, by county, living in food
@@ -188,8 +185,8 @@
       <br>
 
       <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-lg-10 col-sm-6 portfolio-item">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10 portfolio-item">
           <div class="portfolio-caption">
             <h4>Dollar Store Map</h4>
             <p class="text-muted">The map illustrates the number of dollar stores nationwide.</p>
@@ -224,73 +221,74 @@
 
       <br>
       <div class="row">
-        <div class="col-sm-6 portfolio-item">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10 portfolio-item">
           <div class="portfolio-caption">
             <h4>Dollar/Grocery Store Trends</h4>
-            <p class="text-muted">Trends from 2007 to 2018.</p>
+            <p class="text-muted">Trends from 2009 to 2016.</p>
           </div>
-          <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'>
-            <noscript><a href='#'><img alt=' '
-                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
+          <div class='tableauPlaceholder' id='viz1566177890553' style='position: relative'><noscript><a href='#'><img
+                  alt=' '
+                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGroceryStoresHistoricalTrends2009-2016&#47;Dashboard1&#47;1_rss.png'
                   style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
               <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
               <param name='embed_code_version' value='3' />
               <param name='site_root' value='' />
-              <param name='name' value='DollarStoresGrowth&#47;Dashboard1' />
+              <param name='name' value='DollarStoresGroceryStoresHistoricalTrends2009-2016&#47;Dashboard1' />
               <param name='tabs' value='no' />
               <param name='toolbar' value='yes' />
               <param name='static_image'
-                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1.png' />
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGroceryStoresHistoricalTrends2009-2016&#47;Dashboard1&#47;1.png' />
               <param name='animate_transition' value='yes' />
               <param name='display_static_image' value='yes' />
               <param name='display_spinner' value='yes' />
               <param name='display_overlay' value='yes' />
               <param name='display_count' value='yes' />
-              <param name='filter' value='publish=yes' /></object>
-          </div>
+              <param name='filter' value='publish=yes' /></object></div>
           <script type='text/javascript'>
-            var divElement = document.getElementById('viz1565920836892');
-            var vizElement = divElement.getElementsByTagName('object')[0];
-            vizElement.style.minWidth = '720px'; vizElement.style.maxWidth = '920px'; vizElement.style.width = '100%';
-            vizElement.style.minHeight = '287px'; vizElement.style.maxHeight = '687px';
+            var divElement = document.getElementById('viz1566177890553');
+            var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%';
             vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-            var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-            vizElement.parentNode.insertBefore(scriptElement, vizElement);             
+            var scriptElement = document.createElement('script');
+            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);                
           </script>
         </div>
+      </div>
 
-        <div class="col-sm-6 portfolio-item">
+      <br>
+      <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10 portfolio-item">
           <div class="portfolio-caption">
             <h4>Dollar/Grocery Store Growth / Decline</h4>
-            <p class="text-muted">Growth/Decline from 2007 to 2018</p>
+            <p class="text-muted">Growth/Decline from 2009 to 2016</p>
           </div>
-          <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'>
-            <noscript><a href='#'><img alt=' '
-                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
+          <div class='tableauPlaceholder' id='viz1566178015398' style='position: relative'><noscript><a href='#'><img
+                  alt=' '
+                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresandGroceryStoresGrowth2009-2016&#47;Dashboard1&#47;1_rss.png'
                   style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
               <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
               <param name='embed_code_version' value='3' />
               <param name='site_root' value='' />
-              <param name='name' value='DollarStoresGrowth&#47;Dashboard1' />
+              <param name='name' value='DollarStoresandGroceryStoresGrowth2009-2016&#47;Dashboard1' />
               <param name='tabs' value='no' />
               <param name='toolbar' value='yes' />
               <param name='static_image'
-                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1.png' />
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresandGroceryStoresGrowth2009-2016&#47;Dashboard1&#47;1.png' />
               <param name='animate_transition' value='yes' />
               <param name='display_static_image' value='yes' />
               <param name='display_spinner' value='yes' />
               <param name='display_overlay' value='yes' />
               <param name='display_count' value='yes' />
-              <param name='filter' value='publish=yes' /></object>
-          </div>
+              <param name='filter' value='publish=yes' /></object></div>
           <script type='text/javascript'>
-            var divElement = document.getElementById('viz1565920836892');
-            var vizElement = divElement.getElementsByTagName('object')[0];
-            vizElement.style.minWidth = '720px'; vizElement.style.maxWidth = '920px'; vizElement.style.width = '100%';
-            vizElement.style.minHeight = '287px'; vizElement.style.maxHeight = '687px';
+            var divElement = document.getElementById('viz1566178015398');
+            var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%';
             vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-            var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-            vizElement.parentNode.insertBefore(scriptElement, vizElement);             
+            var scriptElement = document.createElement('script');
+            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);               
           </script>
         </div>
       </div>
@@ -312,20 +310,34 @@
         <div class="col-md-1"></div>
         <div class="col-lg-10 col-sm-6 portfolio-item">
           <div class="portfolio-caption">
-            <h4>Urban / Rural Grocery Stores vs. Dollar Stores (Current and Predicted)</h4>
-            <p class="text-muted">The top 3 urban / rural counties with the highest number of people without access to
-              fresh fruit and vegetables
-              are displayed.</p>
+            <h4>Predicted Info </h4>
+            <p class="text-muted">Sentence about predicted information</p>
           </div>
 
-          <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
-            <option value="urban">Urban</option>
-            <option value="rural">Rural</option>
-          </select>
+          <div class="col-lg-2">
+            <form name="statedropdownList">
+              Select a State:
+              <select name="StateSelection" id="stateDropdown" class="statesel">
+                <option value="" selected="selected"></option>
+              </select>
+            </form>
+          </div>
 
-          <!-- Link to Urban / Rural Graph goes here OR is access via Routes ???? -->
+          <div class="col-lg-2">
+            <form name="countydropdownList">
+              Select a County:
+              <select name="CountySelection" id="countyDropdown" class="countysel">
+                <option value="" selected="selected"></option>
+              </select>
+            </form>
+          </div>
         </div>
+
+        <!-- Create a div where the graph will take place -->
+        <div id="graph1"></div>
+
       </div>
+    </div>
     </div>
   </section>
 
@@ -372,7 +384,7 @@
               <i class="fas fa-paint-brush fa-stack-1x fa-inverse"></i>
             </span>
             <h4>Bic Vu</h4>
-            <p class="text-muted">Machine Learning</p>
+            <p class="text-muted">Lead Designer, Machine Learning</p>
           </div>
         </div>
         <div class="col-sm-4">
@@ -382,7 +394,7 @@
               <i class="fas fa-globe-americas fa-stack-1x fa-inverse"></i>
             </span>
             <h4>Monica Linsangan</h4>
-            <p class="text-muted">Maps</p>
+            <p class="text-muted">Maps, Charts</p>
           </div>
         </div>
         <div class="col-sm-4">
@@ -409,6 +421,8 @@
   <!-- Custom scripts for this template -->
   <script src="../static/js/agency.min.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+  <script src="Population.js"></script>
   <script type="text/javascript" src="../static/js/app.js"></script>
 
 </body>
