--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -23,6 +23,8 @@
   <!-- Custom styles for this template -->
   <link href="../static/css/agency.min.css" rel="stylesheet">
 
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
 </head>
 
 <body id="page-top">
@@ -307,37 +309,58 @@
       </div>
 
       <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-lg-10 col-sm-6 portfolio-item">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10 portfolio-item">
           <div class="portfolio-caption">
             <h4>Predicted Info </h4>
             <p class="text-muted">Sentence about predicted information</p>
           </div>
 
-          <div class="col-lg-2">
-            <form name="statedropdownList">
-              Select a State:
-              <select name="StateSelection" id="stateDropdown" class="statesel">
-                <option value="" selected="selected"></option>
-              </select>
-            </form>
-          </div>
+          <!-- <div class="col-lg-2"> -->
+          <form name="statedropdownList">
+            Select a State:
+            <select name="StateSelection" id="stateDropdown" class="statesel">
+              <option value="" selected="selected"></option>
+            </select>
+          </form>
+          <!-- </div> -->
 
-          <div class="col-lg-2">
-            <form name="countydropdownList">
-              Select a County:
-              <select name="CountySelection" id="countyDropdown" class="countysel">
-                <option value="" selected="selected"></option>
-              </select>
-            </form>
-          </div>
+          <!-- <div class="col-lg-2"> -->
+          <form name="countydropdownList">
+            Select a County:
+            <select name="CountySelection" id="countyDropdown" class="countysel">
+              <option value="" selected="selected"></option>
+            </select>
+          </form>
+          <!-- </div> -->
         </div>
-
-        <!-- Create a div where the graph will take place -->
-        <div id="graph1"></div>
-
       </div>
-    </div>
+
+      <br>
+
+      <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10 portfolio-item">
+          <div class="portfolio-caption">
+            <h4>Number of Grocery Stores / Dollar Stores by County </h4>
+          </div>
+
+          <div id="graph1" style="padding-right:30px; width:100%;"></div>
+
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10 portfolio-item">
+          <div class="portfolio-caption">
+            <h4>Total Population vs. Food Desert Population</h4>
+          </div>
+
+          <div id="graph2" style="padding-right:30px; width:100%;"></div>
+
+        </div>
+      </div>
     </div>
   </section>
 
@@ -422,7 +445,8 @@
   <script src="../static/js/agency.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-  <script src="../static/js/Population.js"></script>
+  <script src="../static/js/Results.js"></script>
+  <script src="../static/js/LineGraphs.js"></script>
   <script src="../static/js/app.js"></script>
 
 </body>
