--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -163,7 +163,7 @@
               <param name='site_root' value='' />
               <param name='name' value='FD_v1&#47;Dashboard1' />
               <param name='tabs' value='no' />
-              <param name='toolbar' value='yes' />
+              <param name='toolbar' value='no' />
               <param name='static_image'
                 value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Dashboard1&#47;1.png' />
               <param name='animate_transition' value='yes' />
@@ -202,7 +202,7 @@
               <param name='site_root' value='' />
               <param name='name' value='FD_v1&#47;DollarStoresUSAMap' />
               <param name='tabs' value='no' />
-              <param name='toolbar' value='yes' />
+              <param name='toolbar' value='no' />
               <param name='static_image'
                 value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;DollarStoresUSAMap&#47;1.png' />
               <param name='animate_transition' value='yes' />
@@ -238,7 +238,7 @@
               <param name='site_root' value='' />
               <param name='name' value='DollarStoresGroceryStoresHistoricalTrends2009-2016&#47;Dashboard1' />
               <param name='tabs' value='no' />
-              <param name='toolbar' value='yes' />
+              <param name='toolbar' value='no' />
               <param name='static_image'
                 value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGroceryStoresHistoricalTrends2009-2016&#47;Dashboard1&#47;1.png' />
               <param name='animate_transition' value='yes' />
@@ -275,7 +275,7 @@
               <param name='site_root' value='' />
               <param name='name' value='DollarStoresandGroceryStoresGrowth2009-2016&#47;Dashboard1' />
               <param name='tabs' value='no' />
-              <param name='toolbar' value='yes' />
+              <param name='toolbar' value='no' />
               <param name='static_image'
                 value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresandGroceryStoresGrowth2009-2016&#47;Dashboard1&#47;1.png' />
               <param name='animate_transition' value='yes' />
@@ -309,30 +309,25 @@
       </div>
 
       <div class="row">
-        <div class="col-sm-1"></div>
         <div class="col-sm-10 portfolio-item">
           <div class="portfolio-caption">
             <h4>Predicted Info </h4>
             <p class="text-muted">Sentence about predicted information</p>
           </div>
 
-          <!-- <div class="col-lg-2"> -->
           <form name="statedropdownList">
             Select a State:
             <select name="StateSelection" id="stateDropdown" class="statesel">
               <option value="" selected="selected"></option>
             </select>
           </form>
-          <!-- </div> -->
 
-          <!-- <div class="col-lg-2"> -->
           <form name="countydropdownList">
             Select a County:
             <select name="CountySelection" id="countyDropdown" class="countysel">
               <option value="" selected="selected"></option>
             </select>
           </form>
-          <!-- </div> -->
         </div>
       </div>
 
@@ -341,20 +336,18 @@
       <div class="row">
         <div class="col-sm-6 portfolio-item">
           <div class="portfolio-caption">
-            <h4>Number of Grocery Stores / Dollar Stores by County </h4>
+            <h4>Grocery / Dollar Stores by County </h4>
           </div>
 
           <div id="graph1" style="padding-right:30px; width:100%;"></div>
         </div>
 
-        <div class="row">
-          <div class="col-sm-10 portfolio-item">
-            <div class="portfolio-caption">
-              <h4>Total Population vs. Food Desert Population</h4>
-            </div>
-
-            <div id="graph2" style="padding-right:30px; width:100%;"></div>
+        <div class="col-sm-6 portfolio-item">
+          <div class="portfolio-caption">
+            <h4>Population vs. Food Desert Population</h4>
           </div>
+
+          <div id="graph2" style="padding-right:30px; width:100%;"></div>
         </div>
       </div>
   </section>
@@ -371,16 +364,18 @@
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-lg-10 col-sm-6">
-          <h4>Methodology 1</h4>
-          <p class="text-muted">xxxxx</p>
+          <h4> dfjsoi fjsoidjf oisjiofsdf sdf</h4>
+          <p class="text-muted"> pfjpsjposj fopsj pojdsfpo sjdpjspojfposjfppofjspofjposdjposjpofj spjspoj
+            fpospjpojsdpojfpsjfpojspofjposjdfg </p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-lg-10 col-sm-6">
-          <h4>Methodology 2</h4>
-          <p class="text-muted">yyyyyy</p>
+          <h4> pwuiuw 0rupos jdspofj oisu oisfpoigpo gp909guj jgpoj u pjiot t</h4>
+          <p class="text-muted">p wejrpoweopjsd l;fjasufoj;osdjlkjs;lfj ;sf upsdif; mdlkdoiudpogk'km;fg dfgjpfogj
+            rfgporgf grfgrpojgpofuww3ra'pcpf podfo</p>
         </div>
       </div>
     </div>
