--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -364,7 +364,7 @@
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-lg-10 col-sm-6">
-          <h4> dfjsoi fjsoidjf oisjiofsdf sdf</h4>
+          <h4> Machine Learning</h4>
           <p class="text-muted"> pfjpsjposj fopsj pojdsfpo sjdpjspojfposjfppofjspofjposdjposjpofj spjspoj
             fpospjpojsdpojfpsjfpojspofjposjdfg </p>
         </div>
@@ -373,7 +373,7 @@
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-lg-10 col-sm-6">
-          <h4> pwuiuw 0rupos jdspofj oisu oisfpoigpo gp909guj jgpoj u pjiot t</h4>
+          <h4> Analysis</h4>
           <p class="text-muted">p wejrpoweopjsd l;fjasufoj;osdjlkjs;lfj ;sf upsdif; mdlkdoiudpogk'km;fg dfgjpfogj
             rfgporgf grfgrpojgpofuww3ra'pcpf podfo</p>
         </div>
