--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -499,22 +499,34 @@
         </div>
       </div>
     </div>
-  </section>
+    <br>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="../static/vendor/jquery/jquery.min.js"></script>
-  <script src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- <section class="bg-light page-section" id="copyright"> -->
+      <div class="container">
+        <div class="row">
+          <div class="row align-items-center">
+            <div class="col-sm-12">
+              <span class="copyright">Copyright &copy; 2019</span>
+            </div>
+          </div>
+        </div>
+      <!-- </div> -->
+    </section>
 
-  <!-- Plugin JavaScript -->
-  <script src="../static/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="../static/vendor/jquery/jquery.min.js"></script>
+    <script src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Custom scripts for this template -->
-  <script src="../static/js/agency.min.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="../static/vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-  <script src="../static/js/Results.js"></script>
-  <script src="../static/js/LineGraphs.js"></script>
-  <script src="../static/js/app.js"></script>
+    <!-- Custom scripts for this template -->
+    <script src="../static/js/agency.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script src="../static/js/Results.js"></script>
+    <script src="../static/js/LineGraphs.js"></script>
+    <script src="../static/js/app.js"></script>
 
 </body>
 
